# deliberative-armt-coprocessor

./: .gitignore  CHANGELOG.md  EXPERIMENT_0_TRAINING_UPDATE.md  EXPERIMENT_3_FIXES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  run_full_pipeline.py  verify_checkpoints.py
docs/: EXPERIMENTS.md  EXPERIMENT_3_DETAILED.md  MoE_NEXT_STEPS.md  OPTIMIZATION_GUIDE.md  QUICK_REFERENCE.md
experiments/: experiment_0_architecture_validation.py  experiment_1_moe_validation.py  experiment_3_geometric_analysis.py
src/darmt/: __init__.py
src/darmt/analysis/: geometric_analysis.py  utils_stat.py
src/darmt/evaluation/: __init__.py  experiment_zero.py  synthetic_tasks.py
src/darmt/models/: __init__.py  armt.py  coprocessor.py  dual_architecture.py  memory_fusion.py  moe_armt.py  unified.py
src/darmt/models/moe/: __init__.py  expert.py  moe_layer.py  router.py
src/darmt/utils/: __init__.py  memory.py  memory_visualization.py
tests/: test_fusion_layer.py
